--- a/style.css
+++ b/style.css
@@ -168,8 +168,8 @@ header{padding: 28px 10px 0;position: fixed;inset: 0 0 auto;z-index: 100;}
 .toggleBtn{display: flex !important; justify-content: center; align-items: center;    border: none !important;   position: absolute !important;inset: 0 0 auto;margin: 0 auto;}
 .toggleBtn:hover{background: rgba(255, 255, 255, 0.4) !important;}
 .toggleBtn::before { color: #fff; font-size: 16px !important;line-height: 100%;position: relative;}
-.toggleBtn.pause::before { content: "⏸"; top: -3px;}
-.toggleBtn.play::before { content: "▶"; top: -1px; left: 2px;}
+.toggleBtn.pause::before { content: "\23F8"; top: -3px;}
+.toggleBtn.play::before { content: "\25B6"; top: -1px; left: 2px;}
 
 .class_box1{background: url(images/classes-img-1.webp) no-repeat center/cover;}
 .class_box2{background: url(images/classes-img-2.webp) no-repeat center/cover;}
